# homA-components

./: .gitignore  .gitmodules  README.md  setup.py
common/: common.c  common.h  dst.c  dst.h  ets_missing.h  mcp23017.cpp  mcp23017.h  ota_upgrade.c  ota_upgrade.h  wifi.c  wifi.h
energy/: .gitignore  CMakeLists.txt  README.md  homeassistant_config.sh  sml_mqtt.py
energy/cmake/modules/: FindLIBMOSQUITTOPP.cmake  FindLIBSML.cmake
energy/src/: CMakeLists.txt  MqttClient.cpp  MqttClient.h  SML.cpp  SML.h  main.cpp  sml2mqtt.service  sml2mqtt.yaml
fcm/: .gitignore  README.md  fcm-options-example.json  fcm.js  package.json
garage/: .clang_complete  Makefile  README.md  setup.py
garage/include/: user_config.h  user_config.template.h
garage/include/modules/: common.h
garage/modules/: common.c  common.h  config.c  i2c_master.cpp  i2c_master.h  mcp23017.cpp  mcp23017.h  ota_upgrade.c
garage/mqtt/: mqtt.c
garage/user/: user_cfg.h  user_main.c  user_main.cpp  user_main.h  user_telnetd.c  user_telnetd.h
gas_meter/: README.md  gas_meter  gas_meter.py  homeassistant_config.sh
min_max_saver/: README.md  min_max_saver  min_max_saver.py  setup.py
rcplugs-esp/: Makefile  README.md  setup.py  switch.py
rcplugs-esp/include/: mqtt_config.h  user_config.h  user_config.template.h  user_secret.template.h  user_secret_template.h
rcplugs-esp/modules/: common.c  common.h  ota_upgrade.c  plugs.cpp  wifi.h
rcplugs-esp/mqtt/: mqtt.c
rcplugs-esp/user/: plugs.cpp  plugs.h  user_cfg.c  user_main.cpp  user_partition.c  user_partition.h
rcplugs-rpi/: setup.py
windsensor/: Makefile  README.md
windsensor/include/: user_config.h  user_config.template.h
windsensor/include/modules/: dst.h
windsensor/modules/: user_upgrade.c
windsensor/schematics/: windsensor-esp12-v002.sch
windsensor/user/: user_main.c
